--- a/index.html
+++ b/index.html
@@ -2,11 +2,121 @@
 <head>
   <meta charset="UTF-8">
   <title>Alan Chu</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
   <!-- bootstrap CSS from CDN for heroku deployment -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="static/css/main.css">
+  <link rel="stylesheet" type="text/css"
+  href="static/css/xs-styles.css"/>
+  <link rel="stylesheet" type="text/css"
+  href="static/css/sm-styles.css" />
 </head>
 <body>
+
+<!-- Header -->
+<div class="container">
+  <header>
+    <p>header</p>
+  </header>  
+  <!-- <nav class="navbar">nav</nav> -->
+</div>
+
+
+<!-- Testing out Media -->
+<!-- <div class="container">
+  <div class="row">
+    <ul class="media-list">
+      <li class="media">
+        <a class="media-left" href="#">
+          <img class="media-object" src="/images/pathToYourImage.png" alt="Generic placeholder image">
+        </a>
+        <div class="media-body">
+          <h4 class="media-heading">Media heading</h4>
+          <p>A short sentence to save some space in the code sample</p>
+        </div>
+      </li>
+      <li class="media">
+        <a class="media-left" href="#">
+          <img class="media-object" src="/images/pathToYourImage.png" alt="Generic placeholder image">
+        </a>
+        <div class="media-body">
+          <h4 class="media-heading">Media heading</h4>
+          <p>A short sentence to save some space in the code sample</p>
+        </div>
+      </li>
+    </ul>
+  </div>
+</div> -->
+
+
+<!-- Main content -->
+<div class="container">
+  <!-- Recent Work -->
+  <div class="row">
+    <!-- Header for recent work section -->
+    <div class="project col-xs-12 col-sm-12 col-md-12">
+      <h2 class="text-center"> My Recent Work</h2>
+    </div>
+    <!-- Project #1  -->
+    <div class="project col-xs-12 col-sm-6 col-md-4">
+      <div class="project-img-container">
+        <img class="project-img center-block" src="http://placekitten.com/g/600/600" alt="placeholder image">
+      </div>
+      <div class="project-header">
+        <h3><strong>Title of Project:</strong> subtitle here </h3>
+      </div>
+      <div class="project-blurb">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt labore aspernatur voluptas officiis deleniti soluta voluptatibus fugit nam blanditiis, esse accusantium pariatur excepturi rem, earum cumque. Doloribus excepturi, sit dicta.</p>
+      </div>
+    </div>
+
+    <!-- Project #2  -->
+    <div class="project col-xs-12 col-sm-6 col-md-4">
+      <div class="project-img-container">
+        <img class="project-img center-block" src="http://placekitten.com/g/400/400" alt="placeholder image">
+      </div>
+      <div class="project-header">
+        <h3><strong>Title of Project:</strong> subtitle here </h3>
+      </div>
+      <div class="project-blurb">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt labore aspernatur voluptas officiis deleniti soluta voluptatibus fugit nam blanditiis, esse accusantium pariatur excepturi rem, earum cumque. Doloribus excepturi, sit dicta.</p>
+      </div>
+    </div>
+
+    <!-- Project #3  -->
+    <div class="project col-xs-12 col-sm-6 col-md-4">
+      <div class="project-img-container">
+        <img class="project-img center-block" src="http://placekitten.com/g/300/300" alt="placeholder image">
+      </div>
+      <div class="project-header">
+        <h3><strong>Title of Project:</strong> subtitle here </h3>
+      </div>
+      <div class="project-blurb">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt labore aspernatur voluptas officiis deleniti soluta voluptatibus fugit nam blanditiis, esse accusantium pariatur excepturi rem, earum cumque. Doloribus excepturi, sit dicta.</p>
+      </div>
+    </div>
+
+    <!-- Project #4 -->
+    <div class="project col-xs-12 col-sm-6 col-md-4">
+      <div class="project-img-container">
+        <img class="project-img center-block" src="http://placekitten.com/g/200/200" alt="placeholder image">
+      </div>
+      <div class="project-header">
+        <h3><strong>Title of Project:</strong> subtitle here </h3>
+      </div>
+      <div class="project-blurb">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt labore aspernatur voluptas officiis deleniti soluta voluptatibus fugit nam blanditiis, esse accusantium pariatur excepturi rem, earum cumque. Doloribus excepturi, sit dicta.</p>
+      </div>
+    </div>
+
+  </div> <!-- closes row-->
+</div> <!-- closes container-->
+
+<!-- Footer -->
+<footer class="footer">
+  <p><small>Hi I'm the footer</small></p>
+</footer>
+
   
 </body>
 </html>
