--- a/test.html
+++ b/test.html
@@ -10,45 +10,29 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js"></script>
 </head>
 <body>
+<div class="container">
 
-
-
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-  Launch demo modal
-</button>
-
-<!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog"
-     aria-labelledby="myModalLabel1" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-        <h4 class="modal-title" id="myModalLabel1"><strong>Project title:</strong> subtitle of project</h4>
-      </div>
-      <div class="modal-body">
-        <!-- MODAL CONTENT -->
-        <!-- <img class="" src="http://placekitten.com/g/200/200" alt=""> -->
-<!--         <div class="card">
-          <img class="card-img-top" src="/images/pathToYourImage.png"
-               alt="Card image cap">
-          <div class="card-block">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Some quick example text to build on
-            the card title and make up the bulk of the card's content.</p>
-          </div>
-        </div> -->
-        <!-- END MODAL CONTENT -->
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-      </div>
-    </div>
+<!-- Header w. navbar -->
+<div class="header clearfix">
+  <!-- Row for header -->
+  <nav class="navbar navbar-light bg-faded navbar-dark bg-primary">
+  <div class="nav navbar-nav">
+    <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+    <a class="nav-item nav-link" href="#">About</a>
+    <a class="nav-item nav-link" href="#">Projects</a>
   </div>
+</nav>
 </div>
+
+<!-- Hero welcoming jumbotron -->
+
   
+
+
+
+
+
+<!-- div that closes container -->
+</div> 
 </body>
 </html>
