--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <head>
   <meta charset="UTF-8">
   <title>Alan Chu</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
-  <!-- bootstrap CSS from CDN for heroku deployment -->
-<!--   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
+    <!-- bootstrap CSS from CDN for heroku deployment -->
+  <!--   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"> -->
+  <!-- updated bootstrap to version -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="static/css/main.css">
   <link rel="stylesheet" type="text/css"
   href="static/css/xs-styles.css"/>
   <link rel="stylesheet" type="text/css"
-  href="static/css/sm-styles.css" />
+  href="static/css/sm-styles.css"/>
 </head>
 <body>
 
@@ -19,12 +21,12 @@
     <div class="col-xs-12 col-md-12">
 
       <div class="card card-inverse">
-        <img class="card-img" src="http://placehold.it/750x500" alt="Card image">
+        <img class="card-img img-fluid" src="http://placehold.it/750x500" alt="Card image">
         <div class="card-img-overlay">
           <p class="card-text">I'm text that has a background image!</p>
         </div>
       </div> <!-- div that closes card-->
-      
+
     </div>
 
 
@@ -114,6 +116,5 @@
   <p><small>Hi I'm the footer</small></p>
 </footer>
 
-  
 </body>
 </html>
