About me section with the split column is responsive and looks swell

--- a/index_v1_1.html
+++ b/index_v1_1.html
@@ -27,15 +27,33 @@
 
   <!-- Hero / Jumbotron -->
   <div class="jumbotron">
-    <h1>Hi! I'm Alan</h1>
-    <p class="lead">I love the process of problem solving, <br> whether I am climbing up a cliff or sitting behind a computer typing away. Learn more about what I do <a href="#">below</a>.</p>
+    <div class="row">
+      <div class="col-md-4">
+        <img src="static/images/boltonProfile.jpg" alt="profile picture of Alan rock climbing" class="img-thumbnail">
+      </div>
+      <div class="col-md-8">
+          <h1>Hi! I'm Alan.</h1>
+          <p class="lead">I love the process of problem solving - <br> whether I'm climbing outside or sitting behind a computer typing away. Learn more about what I do <a href="#">below</a>.</p> 
+      </div>
+    </div>
+    <!-- <h1>Hi! I'm Alan</h1>
+    <p class="lead">I love the process of problem solving, <br> whether I am climbing up a cliff or sitting behind a computer typing away. Learn more about what I do <a href="#">below</a>.</p> -->
   </div> <!-- closes jumbotron div -->
 
   <!-- About -->
   <div class="row" id="About">
     <!-- Header text -->
-    <div class="page-header col-md-12">
-      <h1 class="text-center">Example page header <br><small>Subtext for header</small></h1>
+    <div class="page-header col-sm-12 col-md-3">
+      <h2>About Me </h2> <!-- ??? Why can't I center this?? --> 
+    </div>
+    <!-- Content -->
+    <div class="col-sm-12 col-md-9 debug">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor aut expedita voluptatibus fugiat corporis excepturi cupiditate necessitatibus, voluptates. Cum rerum placeat saepe itaque natus, quaerat a harum facere laborum veritatis!</p>
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor aut expedita voluptatibus fugiat corporis excepturi cupiditate necessitatibus, voluptates. Cum rerum placeat saepe itaque natus, quaerat a harum facere laborum veritatis!</p>
+
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor aut expedita voluptatibus fugiat corporis excepturi cupiditate necessitatibus, voluptates. Cum rerum placeat saepe itaque natus, quaerat a harum facere laborum veritatis!</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor aut expedita voluptatibus fugiat corporis excepturi cupiditate necessitatibus, voluptates. Cum rerum placeat saepe itaque natus, quaerat a harum facere laborum veritatis!</p>
     </div>
 
     <!-- Body text -->
