figured out I was still using bootstrap4 and was using the wrong class to align that's why it didn't work

--- a/index_v1_1.html
+++ b/index_v1_1.html
@@ -33,7 +33,7 @@
       </div>
       <div class="col-md-8">
           <h1>Hi! I'm Alan.</h1>
-          <p class="lead">I love the process of problem solving - <br> whether I'm climbing outside or sitting behind a computer typing away. Learn more about what I do <a href="#">below</a>.</p> 
+          <p class="lead">I love the process of problem solving - <br> whether I'm climbing outside or sitting behind a computer typing away. Learn more about what I do <a href="#About">below</a>.</p> 
       </div>
     </div>
     <!-- <h1>Hi! I'm Alan</h1>
@@ -44,7 +44,7 @@
   <div class="row" id="About">
     <!-- Header text -->
     <div class="page-header col-sm-12 col-md-3">
-      <h2>About Me </h2> <!-- ??? Why can't I center this?? --> 
+      <h2 class="text-md-right">About Me </h2> <!-- ??? Why can't I center this?? --> 
     </div>
     <!-- Content -->
     <div class="col-sm-12 col-md-9 debug">
