got a nice looking hr break line in between the about and recent work sections

--- a/index_v1_1.html
+++ b/index_v1_1.html
@@ -33,7 +33,7 @@
       </div>
       <div class="col-md-8">
           <h1>Hi! I'm Alan.</h1>
-          <p class="lead">I love the process of problem solving - <br> whether I'm climbing outside or sitting behind a computer typing away. Learn more about what I do <a href="#About">below</a>.</p> 
+          <p class="lead">I love the process of problem solving - <br> whether I'm trying to figure out how to do a climb or sitting behind a computer typing away. Learn more about what I do <a href="#About">below</a>.</p> 
       </div>
     </div>
     <!-- <h1>Hi! I'm Alan</h1>
@@ -42,23 +42,44 @@
 
   <!-- About -->
   <div class="row" id="About">
-    <!-- Header text -->
+  
+    <!-- Section title -->
     <div class="page-header col-sm-12 col-md-3">
-      <h2 class="text-md-right">About Me </h2> <!-- ??? Why can't I center this?? --> 
+      <h2 class="text-xs-center text-md-right">About Me </h2>
     </div>
+
     <!-- Content -->
-    <div class="col-sm-12 col-md-9 debug">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor aut expedita voluptatibus fugiat corporis excepturi cupiditate necessitatibus, voluptates. Cum rerum placeat saepe itaque natus, quaerat a harum facere laborum veritatis!</p>
+    <section class="col-sm-12 col-md-9 debug">
+      <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, nobis. Ratione earum quam rem magnam culpa adipisci harum iusto quis suscipit tempore ipsa eos, blanditiis laboriosam error facere, dolores quaerat.</p>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor aut expedita voluptatibus fugiat corporis excepturi cupiditate necessitatibus, voluptates. Cum rerum placeat saepe itaque natus, quaerat a harum facere laborum veritatis!</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam reiciendis quisquam nam hic, velit delectus neque magnam magni architecto veritatis laudantium, ipsam in reprehenderit at amet ab qui! Ea, inventore!</p>
+    </section>
+  </div> <!-- closes About -->
 
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor aut expedita voluptatibus fugiat corporis excepturi cupiditate necessitatibus, voluptates. Cum rerum placeat saepe itaque natus, quaerat a harum facere laborum veritatis!</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor aut expedita voluptatibus fugiat corporis excepturi cupiditate necessitatibus, voluptates. Cum rerum placeat saepe itaque natus, quaerat a harum facere laborum veritatis!</p>
+  <!-- Big <hr> -->
+    <div class="row debug">
+      <div class="col-sm-12 col-md-9 offset-md-3">
+        <div class="hr-spacer"></div>
+        <div class="hr-line"></div>
+<!--         <div class="col-xs-8 offset-xs-2 hr-line"></div> -->
+        <div class="hr-spacer"></div> 
+      </div>
     </div>
 
-    <!-- Body text -->
-    
-  </div> <!-- closes About section -->
+  <!-- Work -->
+  <div class="row" id="Work">
+
+    <!-- Section title -->
+    <div class="page-header col-sm-12 col-md-3">
+      <h2 class="text-xs-center text-md-right">Recent Work </h2>
+    </div>
+
+    <!-- Content -->
+    <section class="col-sm-12 col-md-9 debug">
+      <h3> Title</h3>
+      <p> description goes in here. Very interesting stuff yo</p>
+    </section>
+  </div> <!-- closes About -->
 
 
   <!-- Footer -->
