practicing using require.js to load jquery other js modules

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Alan Chu version 1.1 </title>
+  <title>Alan Chu </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
     <!-- bootstrap CSS from CDN for heroku deployment -->
   <!--   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"> -->
   <!-- updated bootstrap to version -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="static/css/main_v1_1.css">
+  <link rel="stylesheet" type="text/css" href="static/css/main.css">
 </head>
 <body>
 <div class="container">
@@ -20,6 +20,7 @@
         <a class="nav-item nav-link" href="#">Home</a>
         <a class="nav-item nav-link" href="#About">About</a>
         <a class="nav-item nav-link" href="#Work">Projects</a>
+        <a class="nav-item nav-link" href="#Contact">Contact</a>
       </div>
     </nav>
   </div> <!-- closes header div -->
@@ -32,9 +33,9 @@
         <img src="static/images/boltonProfile.jpg" alt="profile picture of Alan rock climbing" class="img-thumbnail">
       </div>
       <div class="col-md-8">
-          <div class="hr-spacer hidden-md-up"></div>
+          <div class="hidden-md-up spacer"></div>
           <h1 class="text-xs-center text-md-left">Hi! I'm Alan.</h1>
-          <p class="lead">I love the process of problem solving - <br> whether I'm trying to figure out how to do a climb or sitting behind a computer typing away. Learn more about what I do <a href="#About">below</a>.</p> 
+          <p class="lead">I love the art of problem solving - <br> whether I'm trying to figure out how to do a climb or sitting behind a computer typing away. Learn more about what I do <a href="#About">below</a>.</p> 
       </div>
     </div>
   </div> <!-- closes jumbotron div -->
@@ -58,9 +59,9 @@
   <!-- Big <hr> -->
     <div class="row">
       <div class="col-sm-12 col-md-9 offset-md-3">
-        <div class="hr-spacer"></div>
-        <div class="hr-line"></div>
-        <div class="hr-spacer"></div> 
+        <div class="spacer"></div>
+        <div class="line"></div>
+        <div class="spacer"></div> 
       </div>
     </div>
 
@@ -158,5 +159,7 @@
       </div>
     </div>
   </footer>
+
+<script data-main="scripts/main" src="scripts/require.js"></script>
 </body>
 </html>
