Added a flex display to the #Work section in order to easily change the order of the work later on. Also added my hangman game, no link to the site yet though

--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
       <h2 class="text-xs-center text-md-right">Recent Work </h2>
     </div>
     <!-- Content -->
-    <section class="col-sm-12 col-md-9 debug">
+    <section class="col-sm-12 col-md-9">
       <!-- Project #1 -->
-      <article>
+      <article id="portfolio-project" class="project-item">
         <div class="card">
           <div class="card-block">
             <h3 class="card-title">Personal Portfolio Website</h3>
@@ -84,21 +84,24 @@
           </div>
         </div> <!-- closes card div-->   
       </article>
+
       <!-- Project #2 -->
-       <article>
+       <article id="battleship-project" class="project-item">
         <div class="card">
           <div class="card-block">
             <h3 class="card-title">Battleship.js</h3>
             <h6 class="card-subtitle"><span class="tag tag-info">JavaScript</span></h6>
             <!-- <p class="project-post-meta">April 2016</p> -->
             <p class="card-text">Made a rudimentary browswer-based rendition of the classic board game battleship. My first JavaScript app, and was used as a learning tool. Implemented it in both vanilla JS and with the use of JQuery. </p>
-
-            <div class="card-footer"><p><small>Play the game here: <a href="https://thechutrain.github.io/battleship.js/battleship.html">link</a></small></p></div>
           </div>
+          
+          <div class="card-footer"><p><small>Play the game here: <a href="https://thechutrain.github.io/battleship.js/battleship.html">link</a></small></p></div>
+
         </div> <!-- closes card div-->   
       </article>
+
       <!-- Project #3 -->
-      <article>
+      <article id="default-project" class="project-item">
         <div class="card">
           <div class="card-block">
             <h3 class="card-title">Title of Project</h3>
@@ -108,8 +111,23 @@
           </div>
         </div> <!-- closes card div-->   
       </article>
+
+      <!-- Project #4 -->
+      <article id="hangman-project" class="project-item">
+        <div class="card">
+          <div class="card-block">
+            <h3 class="card-title">Hangman.js</h3>
+            <h6 class="card-subtitle"><span class="tag tag-info">JavaScript</span>&nbsp;<span class="tag tag-default">Beta</span></h6>
+            <p class="card-text">This vanilla JavaScript hangman game was written in a Model-View-Controller(MVC) style in order to better organize code. </p>
+          </div>
+
+            <div class="card-footer"><p><small>Play the game here: <a href="https://thechutrain.github.io/battleship.js/battleship.html">link</a></small></p></div>
+
+        </div> <!-- closes card div-->   
+      </article>
+
     </section>
-  </div> <!-- closes About -->
+  </div> <!-- closes Work -->
 
 
   <!-- Big <hr> -->
@@ -152,7 +170,7 @@
 </div> <!-- div that closes container -->
 
   <!-- Footer -->
-  <footer class="footer debug">
+  <footer class="footer">
     <div class="row">
       <div class="">
         <p class="text-xs-center footer-text"><small>&copy 2016 Alan Chu</small></p>
