added a blockquote, and also fixed issue with the .line class not showing the bottom border

--- a/index.html
+++ b/index.html
@@ -33,12 +33,33 @@
         <img src="static/images/boltonProfile.jpg" alt="profile picture of Alan rock climbing" class="img-thumbnail">
       </div>
       <div class="col-md-8">
-          <div class="hidden-md-up spacer"></div>
+          <div class="hidden-md-up spacer-top"></div>
           <h1 class="text-xs-center text-md-left">Hi! I'm Alan.</h1>
           <p class="lead">I love the art of problem solving - <br> whether I'm trying to figure out how to do a climb or sitting behind a computer typing away. Learn more about what I do <a href="#About">below</a>.</p> 
+
+          <blockquote class="blockquote hidden-md-down">
+            <p class="mb-0">It is not the mountain we conquer, but ourselves.</p>
+            <footer class="blockquote-footer">Edmund Hillary,
+              <cite title="Source Title">That's Life: Wild Wit & Wisdom</cite>
+            </footer>
+          </blockquote>  
+
       </div>
     </div>
   </div> <!-- closes jumbotron div -->
+
+
+  <!-- Blockquote -->
+<!--   <div class="row" id="blockquote">
+    <div class="blockquote-wrapper col-sm-12 col-md-9 offset-md-3">
+      <blockquote class="blockquote blockquote-reverse">
+        <p class="mb-0">It is not the mountain we conquer, but ourselves.</p>
+        <footer class="blockquote-footer">Edmund Hillary,
+          <cite title="Source Title">That's Life: Wild Wit & Wisdom</cite>
+        </footer>
+      </blockquote>  
+    </div>
+  </div> --> <!-- closes blockquote row -->
 
 
   <!-- About -->
@@ -59,9 +80,9 @@
   <!-- Big <hr> -->
     <div class="row">
       <div class="col-sm-12 col-md-9 offset-md-3">
-        <div class="spacer"></div>
+        <div class="spacer-top"></div>
         <div class="line"></div>
-        <div class="spacer"></div> 
+        <div class="spacer-bottom"></div> 
       </div>
     </div>
 
@@ -121,7 +142,7 @@
             <p class="card-text">This vanilla JavaScript hangman game was written in a Model-View-Controller(MVC) style in order to better organize code. </p>
           </div>
 
-            <div class="card-footer"><p><small>Play the game here: <a href="https://thechutrain.github.io/battleship.js/battleship.html">link</a></small></p></div>
+            <div class="card-footer"><p><small>Play the game here: <a href="#">link</a></small></p></div>
 
         </div> <!-- closes card div-->   
       </article>
@@ -133,9 +154,9 @@
   <!-- Big <hr> -->
     <div class="row">
       <div class="col-sm-12 col-md-9 offset-md-3">
-        <div class="hr-spacer"></div>
-        <div class="hr-line"></div>
-        <div class="hr-spacer"></div> 
+        <div class="spacer-top"></div>
+        <div class="line"></div>
+        <div class="spacer-bottom"></div> 
       </div>
     </div>
 
@@ -161,11 +182,8 @@
           </section>
   </div> 
 
-
-
-  <!-- Footer -->
-
-
+  <!-- Spacer -->
+  <div class="spacer-top">&nbsp;</div>
 
 </div> <!-- div that closes container -->
 
@@ -177,6 +195,7 @@
       </div>
     </div>
   </footer>
+
 
 <script data-main="scripts/main" src="scripts/require.js"></script>
 </body>
