--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <p class="card-text">This vanilla JavaScript hangman game was written in a Model-View-Controller(MVC) style in order to better organize code. </p>
           </div>
 
-            <div class="card-footer"><p><small>Play the game here: <a href="#">link</a></small></p></div>
+            <div class="card-footer"><p><small>Play the game here: <a href="https://hangman-awesomeness.herokuapp.com/">link</a></small></p></div>
 
         </div> <!-- closes card div-->   
       </article>
