simpler background set, css style

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <title>Alan Chu </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
     <!-- bootstrap CSS from CDN for heroku deployment -->
-  <!--   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"> -->
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"> 
   <!-- updated bootstrap to version -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css">
+  <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css">-->
   <link rel="stylesheet" type="text/css" href="static/css/main.css">
 </head>
 <body>
