before merging button wrapper and text wrapper

--- a/home.html
+++ b/home.html
@@ -26,10 +26,19 @@
         
             <!-- main content -->
             <div class="main-content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti doloremque aperiam quos harum itaque nemo, saepe sed excepturi, quaerat eos ex iusto animi at maxime accusantium in repellendus sit minus!</p>
+                <!-- text-wrapper-->
+                <div class="text-wrapper">
+                    <h1> Welcome! </h1>
+                    <h3>I am Alan, and I am a full stack developer.</h3>
+                </div>
+                <!-- button-wrapper-->
+                <div class="button-wrapper">
+                    <!--<p> button wrapper here</p>-->
+                    <a href="/portfolio" class="btn-link">Portfolio</a>
+                </div>
             </div>
         </div> <!-- closes middle row-->
-        
+
     </div>     <!-- closes container-->
 
 </body>
